Fixed a broken build caused by OutOfMemoryError
It looks like our tests are getting bigger to the point that it needs
more PermGen space. Use fork and run with a bigger perm gen size to get
going.